--- a/popup.html
+++ b/popup.html
@@ -4,29 +4,11 @@
   <meta charset="UTF-8">
   <title>arXiv Meta</title>
   <style>
-    body {
-      width: 350px; /* ポップアップの幅を指定 */
-      font-family: sans-serif;
-      font-size: 14px;
-    }
-    h3 {
-      font-size: 16px;
-      margin-top: 0;
-      margin-bottom: 8px;
-    }
-    div {
-      margin-bottom: 10px;
-    }
-    strong {
-      display: block;
-      color: #333;
-    }
-    #authors {
-      white-space: normal; /* 著者名が長い場合に折り返す */
-    }
-    #error {
-        color: red;
-    }
+    body { width: 350px; font-family: sans-serif; font-size: 14px; }
+    div { margin-bottom: 10px; }
+    strong { display: block; color: #333; }
+    p { margin: 4px 0; }
+    #error { color: red; }
   </style>
 </head>
 <body>
@@ -34,11 +16,19 @@
   <div id="content">
     <div>
       <strong>Title:</strong>
-      <span id="title">Loading...</span>
+      <p id="title">Loading...</p>
     </div>
     <div>
-      <strong>Authors:</strong>
-      <span id="authors">Loading...</span>
+      <strong>Author(s):</strong>
+      <p id="author">Loading...</p>
+    </div>
+    <div>
+      <strong>Date:</strong>
+      <p id="date">Loading...</p>
+    </div>
+    <div>
+      <strong>Primary Subject:</strong>
+      <p id="subject">Loading...</p>
     </div>
     <div>
       <strong>Abstract:</strong>
@@ -46,7 +36,7 @@
     </div>
   </div>
   <div id="error" style="display: none;">
-      This does not seem to be an arXiv abstract page.
+      Could not retrieve metadata from this page.
   </div>
 
   <script src="popup.js"></script>
