--- a/popup.html
+++ b/popup.html
@@ -39,6 +39,9 @@
       Could not retrieve metadata from this page.
   </div>
 
+  <button id="saveButton">現在のページをNotionに保存</button>
+  <div id="status"></div>
+
   <script src="popup.js"></script>
 </body>
 </html>
